# LogReaderJNI

./: TestFile.txt  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sburov/logparser/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/logreader/: LogReader.cpp  LogReader.h
app/src/main/java/com/sburov/logparser/data/local/: FilteredLinesLogger.java
app/src/main/java/com/sburov/logparser/data/local/logreader/: LogReaderImpl.java
app/src/main/java/com/sburov/logparser/data/local/matchinglines/: MatchingLinesImpl.java
app/src/main/java/com/sburov/logparser/domain/downloadclient/: StreamConsumer.java  StreamDownloadClient.java  StreamDownloadListener.java
app/src/main/java/com/sburov/logparser/domain/logreader/: LogReader.java  LogReaderListener.java
app/src/main/java/com/sburov/logparser/domain/matchinglines/: MatchingLines.java
app/src/main/java/com/sburov/logparser/presentation/: MainActivity.java  OutputFragment.java  SetupFragment.java
app/src/main/jni/: com_sburov_logparser_data_local_logreader_LogReaderImpl.cpp  com_sburov_logparser_data_local_logreader_LogReaderImpl.h
app/src/main/res/layout/: activity_main.xml  fragment_output.xml  fragment_setup.xml  item_filtered_lines.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sburov/logparser/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
